--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body {
   height: 100vh;
-  background: linear-gradient(135deg, #153677, #4e085f);
+  background: linear-gradient(#153677, #4e085f);
 }
 header .nav {
   display: flex;
